# wikiracer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  visited_wiki.sqlite  wikiracer.py
src/wikiracer/: addon.py  cli.py  monitor.py  options.py  progress.py  storage.py  urls.py
wikiracer/src/wikiracer/: __init__.py
